--- a/index.html
+++ b/index.html
@@ -661,6 +661,40 @@
       </div>
     </section>
 
+    <!-- CERTIFICATIONS -->
+    <section id="certificate" class="certificate">
+      <div class="container">
+        <h2 class="main-font">Certifications</h2>
+
+        <div class="certificate-row" data-aos="fade-up">
+          <div class="certificate-left">
+            <img src="/dist/img/GuviCertification.png" alt="" />
+          </div>
+          <div class="certificate-right">
+            <h3>Full Stack Development</h3>
+
+            <p>
+            Completed the Guvi Full Stack Development Course using the MERN
+              stack (MongoDB, Express.js, React.js, Node.js). This certification
+              equipped me with skills in building full stack web applications,
+              managing databases, creating RESTful APIs, and deploying projects,
+              enabling me to develop dynamic and responsive web solutions.
+            </p>
+
+            <div class="certificate">
+              <a
+                href="https://www.guvi.in/verify-certificate?id=1kJuq724291P4w9237"
+                class="btn-bluepro btn-small"
+                target="_blank"
+              >
+                <i class="fas fa-external-link-alt"></i> Show credentials</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- CONTACT -->
     <section id="contact" class="contact">
       <div class="container">
