--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                       href="https://github.com/Yukechan2002"
                       class="link"
                       target="_blank"
-                      ><i class="fab fa-github"></i> GitHub</a
+                    >
+                      GitHub</a
                     >
                   </li>
                 </ul>
@@ -135,7 +136,7 @@
         <!-- HERO -->
         <div class="hero">
           <div data-aos="fade-up">
-            <h1 class="h1">Hi, I'm Yukesh Chandran</h1>
+            <h1 class="h1">Hi, I'm Yukesh</h1>
             <p class="student" id="student">
               <b
                 >I dedicate my day to developing and managing projects with
@@ -674,7 +675,7 @@
             <h3>Full Stack Development</h3>
 
             <p>
-            Completed the Guvi Full Stack Development Course using the MERN
+              Completed the Guvi Full Stack Development Course using the MERN
               stack (MongoDB, Express.js, React.js, Node.js). This certification
               equipped me with skills in building full stack web applications,
               managing databases, creating RESTful APIs, and deploying projects,
@@ -802,34 +803,14 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!-- Particles.js for hero section -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
-      integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+   
 
     <!-- GSAP animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
 
-    <script>
-      particlesJS.load("particles-js", "./particles.json", function () {
-        console.log("particles.json loaded...");
-      });
+   
 
-      particlesJS.load("skills", "./particles.json", function () {
-        console.log("particles.json loaded...");
-      });
-
-      particlesJS.load("footer", "./particles.json", function () {
-        console.log("particles.json loaded...");
-      });
-
-      particlesJS.load();
-    </script>
-
-    <script defer src="js/app.js"></script>
+    
 
     <!-- AOS Animations -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
