--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
             <div class="project-links">
               <a
-                href="https://wedding-wise.netlify.app/"
+                href="https://theweddingwise.netlify.app"
                 class="btn-bluepro btn-small"
                 target="_blank"
               >
