--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="hero-btns">
               <a href="#projects" class="btn-blue"> Projects</a>
               <a
-                href="/dist/Yukesh_CV.pdf"
+                href="/dist/img/01-10-2024.pdf"
                 class="btn-blue-outline mx-1"
                 target="_blank"
                 ><i class="fas fa-file"></i> Resume</a
@@ -316,6 +316,168 @@
               >
               <a
                 href="https://github.com/Yukechan2002/WeddingWise"
+                class="btn-blue-outlinepro btn-small"
+                target="_blank"
+              >
+                <i class="fab fa-github"></i> Code</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="project-row" data-aos="fade-up">
+          <div class="project-left">
+            <img src="/dist/img/wildexplorers.png" alt="" />
+          </div>
+          <div class="project-right">
+            <h3>WildExplorers</h3>
+
+            <p>
+              WildExplorers is a comprehensive tourism booking website designed to
+              provide users with a seamless experience for booking tours,
+              reserving seats, and making payments. The project leverages modern
+              web technologies to offer a fast, responsive, and secure platform
+              for travelers.
+            </p>
+
+            <ul class="tech-stack-list">
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:javascript"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:react"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:bootstrap"
+                  data-inline="false"
+                ></span>
+              </li>
+
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:nodejs"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:express"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:mongodb"
+                  data-inline="false"
+                ></span>
+              </li>
+            </ul>
+
+            <div class="project-links">
+              <a
+                href="https://thewildexplorers.netlify.app/"
+                class="btn-bluepro btn-small"
+                target="_blank"
+              >
+                <i class="fas fa-external-link-alt"></i> Live</a
+              >
+              <a
+                href="https://github.com/Yukechan2002/WildExplorers"
+                class="btn-blue-outlinepro btn-small"
+                target="_blank"
+              >
+                <i class="fab fa-github"></i> Code</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="project-row" data-aos="fade-up">
+          <div class="project-left">
+            <img src="/dist/img/shopcart.png" alt="" />
+          </div>
+          <div class="project-right">
+            <h3>Shop Cart</h3>
+
+            <p>
+              ShopCart is a versatile e-commerce web application designed to
+              provide users with a seamless shopping experience. The platform
+              allows users to browse products, add items to their cart, and
+              manage their orders effortlessly. With a focus on user-friendly
+              navigation and a responsive design, ShopCart offers a fast and
+              efficient solution for online shopping without the need for
+              payment processing.
+            </p>
+
+            <ul class="tech-stack-list">
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:javascript"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:react"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:bootstrap"
+                  data-inline="false"
+                ></span>
+              </li>
+
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:nodejs"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:express"
+                  data-inline="false"
+                ></span>
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="logos:mongodb"
+                  data-inline="false"
+                ></span>
+              </li>
+            </ul>
+
+            <div class="project-links">
+              <a
+                href="https://shoopcart.netlify.app/"
+                class="btn-bluepro btn-small"
+                target="_blank"
+              >
+                <i class="fas fa-external-link-alt"></i> Live</a
+              >
+              <a
+                href="https://github.com/Yukechan2002/E-shop-FE"
                 class="btn-blue-outlinepro btn-small"
                 target="_blank"
               >
